# kllamabooks

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakeLists.txt.patch  LICENSE  README.md  TODO.md  fix_copy_del.patch  fix_copy_del_2.patch  fix_db.diff  fix_db.patch  fix_doxygen.py  fix_drag.patch  fix_drag_allow_files.patch  fix_drop.patch  fix_duplicate_header.patch  fix_final.patch  fix_forks.patch  fix_forks_2.patch  fix_get_notes.py  fix_h.patch  fix_mainwindow.py  fix_move.patch  fix_notify.patch  fix_overwrite.patch  fix_pr.patch  fix_pr_comments.py  fix_schema.py  fix_source.patch  fix_status_bar.patch  fix_timer.patch  fix_ui_updates.patch  get_notifications.py  get_plan.py  install_host.sh  install_native.sh  patch.diff  patch_dialog.py  patch_dialog2.py  patch_h.diff  (+86 more)
.github/workflows/: ci.yml
.jules/: Dockerfile
build_real/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_real/kllamabooks_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_real/kllamabooks_autogen/UVLADIE3JM/: moc_ChatInputWidget.cpp  moc_ChatInputWidget.cpp.d  moc_DatabaseSettingsDialog.cpp  moc_DatabaseSettingsDialog.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_ModelExplorer.cpp  moc_ModelExplorer.cpp.d  moc_ModelSelectionDialog.cpp  moc_ModelSelectionDialog.cpp.d  moc_NotificationDelegate.cpp  moc_NotificationDelegate.cpp.d  moc_OllamaClient.cpp  moc_OllamaClient.cpp.d  moc_QueueManager.cpp  moc_QueueManager.cpp.d  moc_QueueWindow.cpp  moc_QueueWindow.cpp.d  moc_SettingsDialog.cpp  moc_SettingsDialog.cpp.d  qrc_resources.cpp
build_test/: test_list_view
build_test/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
packaging/flatpak/: com.arran4.kllamabooks.yaml
src/: AIOperationsDialog.cpp  AIOperationsDialog.h  AIOperationsEditorWidget.cpp  AIOperationsEditorWidget.h  AIOperationsManager.cpp  AIOperationsManager.h  AiActionDialog.cpp  AiActionDialog.h  BookDatabase.cpp  BookDatabase.cpp.orig  BookDatabase.cpp.rej  BookDatabase.h  BookDatabase.h.orig  ChatInputWidget.cpp  ChatInputWidget.h  ChatSettingsDialog.cpp  ChatSettingsDialog.h  DatabaseSettingsDialog.cpp  DatabaseSettingsDialog.h  DocumentEditWindow.cpp  DocumentEditWindow.h  DocumentHistoryDialog.cpp  DocumentHistoryDialog.h  DocumentReviewDialog.cpp  DocumentReviewDialog.h  DocumentTemplatesEditorWidget.cpp  DocumentTemplatesEditorWidget.h  DocumentTemplatesManager.cpp  DocumentTemplatesManager.h  DraftSelectionDialog.cpp  DraftSelectionDialog.h  MainWindow.cpp  MainWindow.cpp.orig  MainWindow.cpp.rej  MainWindow.h  MainWindow.h.orig  MergeDocumentsDialog.cpp  MergeDocumentsDialog.h  ModelExplorer.cpp  ModelExplorer.cpp.orig  (+35 more)
tests/: test_TemplateParser.cpp
